# sipXAocBilling

./: .project  Makefile.am  README.md  configure.ac  iant-aoc-billing.spec  sipxaocbilling.spec.in
config-plugin/: Makefile.am  iantaocbilling-plugin.properties  sipxplugin.beans.xml
config-plugin/src/de/iant/iab/: IantAocBilling.java  IantAocBillingImpl.java  IantAocBillingProxyHook.java  IantAocBillingSettings.java
etc/: Makefile.am  iantaocbilling.properties  iantaocbilling.xml
proxy-plugin/src/: IantAocBilling.cpp  IantAocBilling.h  Makefile.am
